Test empty map and empty list binary evaluation

--- a/main.yml
+++ b/main.yml
@@ -33,6 +33,8 @@
             var2: "5"
             groups: ['admin']
      user_admin: "{% for username, user in user_list.iteritems() %}{% if 'admin' in user.groups %}{{username}}{% if not loop.last %},{% endif%}{% endif %}{% endfor %}"
+     empty_dict: {}
+     empty_list: []
    tasks:
     - name: "with_items with dictionnary"
       debug: msg="key={{ item.keys().0 }} ** value={{ item.values().0 }}"
@@ -121,6 +123,10 @@
 
     - debug: msg="{{item}}"
       with_items: user_admin.split(',')
+    - name: "empty list evaluate to false"
+      debug: msg="{{ 'empty list is evaluate to false' if empty_list == false else 'empty list isn't evaluate to false'}}"  
+    - name: "empty dict evaluate to false"
+      debug: msg="{{ 'empty dict is evaluate to false' if empty_dict == false else 'empty dict isn't evaluate to false'}}"      
  - hosts: dev_testing
    tasks:
     - name: Test IamIn
