--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ language: python
 python: "2.7"
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq python-apt python-pycurl python-passlib
+ - sudo apt-get install -qq python-apt python-pycurl
 install:
   - pip install ansible
+  - pip install passlib
   - ansible --version
 script:
   - ansible-playbook -i ansible_hosts -vv main.yml
