--- a/main.yml
+++ b/main.yml
@@ -124,9 +124,9 @@
     - debug: msg="{{item}}"
       with_items: user_admin.split(',')
     - name: "empty list evaluate to false"
-      debug: msg="{{ 'empty list is evaluate to false' if empty_list == false else 'empty list isn't evaluate to false'}}"  
+      debug: msg="{{ 'empty list is evaluate to false' if empty_list == false else 'empty list is not evaluate to false'}}"  
     - name: "empty dict evaluate to false"
-      debug: msg="{{ 'empty dict is evaluate to false' if empty_dict == false else 'empty dict isn't evaluate to false'}}"      
+      debug: msg="{{ 'empty dict is evaluate to false' if empty_dict == false else 'empty dict is not evaluate to false'}}"      
  - hosts: dev_testing
    tasks:
     - name: Test IamIn
